--- a/live.html
+++ b/live.html
@@ -27,10 +27,11 @@ title: Live View
   <template x-if="fourthDownPlays">
     <ul class="tile-list full">
       <template x-for="play in fourthDownPlays" :key="play.id">
-        <li>
+      <li>
           <div>
-            <div x-text="`${play.start?.down} & ${play.start?.distance} from the ${play.start?.yardLine} | Q${play.period?.number} ${play.clock?.displayValue} | Birds are ???`"></div>
-            <div x-text="`Recomendation: ${play.recommendation} | Coach: {insert decision}`"></div>
+            <div x-text="`${play.downDistance} | Q${play.period?.number} ${play.clock} | Birds are ${play.birds_winning_status} ${play.high_score}-${play.low_score}`"></div>
+            <div x-text="`Recommendation: ${play.typeText} | ${play.birds_coach}: ${play.typeAbbr === 'Rush' || play.typeAbbr === 'Pass' ? 'Go for it' : play.typeText }`"></div>
+
             <table>
               <thead>
                 <tr>
@@ -74,6 +75,79 @@ title: Live View
 </div>
 
 <script>
+function simplifyPlay(play) {
+  return {
+    id: play.id,
+    typeText: play.type?.text || '',
+    typeAbbr: play.type?.abbreviation || '',
+    description: play.text || '',
+    quarter: play.period?.number ?? null,
+    clock: play.clock?.displayValue || '',
+    offenseTeamId: play.team?.$ref?.split('/').pop() || null,
+    downDistance: play.start?.downDistanceText || '',
+
+    // Added fields
+    quarter_seconds_remaining: play.clock?.value ?? null,
+    home_team: play.competitors?.find(t => t.home)?.team?.abbreviation || '',
+    away_team: play.competitors?.find(t => t.away)?.team?.abbreviation || '',
+    home_score: play.homeScore ?? null,
+    away_score: play.awayScore ?? null,
+    home_coach: 'UnknownH', // not available in ESPN play-by-play
+    away_coach: 'UnknownA', // not available in ESPN play-by-play
+    home_timeouts_remaining: play.homeTimeouts ?? null,
+    away_timeouts_remaining: play.awayTimeouts ?? null,
+    down: play.start?.down ?? null,
+    ydstogo: play.start?.distance ?? null,
+    yrdln: play.start?.yardLine || '',
+    qtr: play.period?.number ?? null,
+    model_recommendation: play.summary || '',
+    actual_decision: play.type?.text || '',
+    go_wp: play.go_wp ?? null,
+    first_down_prob: play.first_down_prob ?? null,
+    wp_fail: play.wp_fail ?? null,
+    wp_succeed: play.wp_succeed ?? null,
+    punt_wp: play.punt_wp ?? null,
+    fg_wp: play.fg_wp ?? null,
+    fg_prob: play.fg_prob ?? null,
+    miss_fg_wp: play.miss_fg_wp ?? null,
+    make_fg_wp: play.make_fg_wp ?? null,
+  };
+}
+
+function addBirdsContext(play) {
+  play.birdsIsHome = play.homeTeam?.$ref?.endsWith('/21');
+  play.birds_score = play.birdsIsHome ? play.homeScore : play.awayScore;
+  play.opp_score = play.birdsIsHome ? play.awayScore : play.homeScore;
+  play.birds_team = play.birdsIsHome ? play.homeTeamAbbreviation : play.awayTeamAbbreviation;
+  play.opp_team = play.birdsIsHome ? play.awayTeamAbbreviation : play.homeTeamAbbreviation;
+  play.birds_coach = play.birdsIsHome ? play.home_coach : play.away_coach;
+  play.birds_winning_status = play.birds_score > play.opp_score ? 'winning' :
+                               play.birds_score < play.opp_score ? 'losing' : 'tied';
+  play.high_score = Math.max(play.homeScore, play.awayScore);
+  play.low_score = Math.min(play.homeScore, play.awayScore);
+  return play;
+}
+
+function fetchFourthDownPlaysForGame(gameId) {
+  return fetch(`https://sports.core.api.espn.com/v2/sports/football/leagues/nfl/events/${gameId}/competitions/${gameId}/plays?limit=1000`)
+    .then(res => res.json())
+    .then(playsData => {
+      const rawPlays = playsData.items || [];
+      console.log("Total plays fetched:", rawPlays.length);
+      const filteredPlays = rawPlays
+        .filter(p =>
+          p.start?.down === 4 &&
+          p.start?.team?.$ref?.includes('/21')
+        )
+        .map(p => {
+          const simplified = { ...p, ...simplifyPlay(p) };
+          return addBirdsContext(simplified);
+        });
+      console.log("All 4th down plays count:", filteredPlays.length);
+      return filteredPlays;
+    });
+}
+
   const params = new URLSearchParams(window.location.search);
   const gameId = params.get('espn_game_id');
 
@@ -93,17 +167,11 @@ title: Live View
         if (gameId) {
           this.isBirdsPlaying = true;
           this.nextGame = null;
-          fetch(`https://sports.core.api.espn.com/v2/sports/football/leagues/nfl/events/${gameId}/competitions/${gameId}/plays?limit=1000`)
-            .then(res => res.json())
-            .then(playsData => {
-              const items = playsData.items || [];
-              console.log("Total plays fetched:", items.length);
-              const fourthDowns = (items || [])
-                .filter(play => play.start?.down === 4)
-                .sort((a, b) => a.id - b.id); // oldest first
-              console.log("All 4th down plays count:", fourthDowns.length);
-              if (fourthDowns.length > 0) {
-                const latest = fourthDowns[0];
+          fetchFourthDownPlaysForGame(gameId)
+            .then(filteredPlays => {
+              this.fourthDownPlays = filteredPlays;
+              if (filteredPlays.length > 0) {
+                const latest = filteredPlays[0];
                 this.latestHeader = {
                   game: `Game ID: ${gameId}`,
                   quarter: latest.period?.number || "N/A",
@@ -113,7 +181,6 @@ title: Live View
                   score: "Score unknown"
                 };
               }
-              this.fourthDownPlays = fourthDowns;
             });
           return;
         }
@@ -151,19 +218,12 @@ title: Live View
                   score: birdsGame.competitions[0].competitors.map(t => `${t.team.abbreviation}: ${t.score}`).join(" vs ")
                 };
                 const eventId = birdsGame.id;
-                fetch(`https://sports.core.api.espn.com/v2/sports/football/leagues/nfl/events/${eventId}/competitions/${eventId}/plays?limit=1000`)
-                  .then(res => res.json())
-                  .then(playsData => {
-                    const items = playsData.items || [];
-                    console.log("Total plays fetched:", items.length);
-                    const fourthDowns = (items || [])
-                      .filter(play => play.start?.down === 4)
-                      .sort((a, b) => a.id - b.id); // oldest first
-                    console.log("All 4th down plays count:", fourthDowns.length);
-                    console.log("Fourth down plays:", fourthDowns);
-                    if (fourthDowns.length > 0) {
-                      this.fourthDownPlays = fourthDowns;
-                      const latest = fourthDowns[0];
+                fetchFourthDownPlaysForGame(eventId)
+                  .then(filteredPlays => {
+                    this.fourthDownPlays = filteredPlays;
+                    console.log("Fourth down plays:", this.fourthDownPlays);
+                    if (filteredPlays.length > 0) {
+                      const latest = filteredPlays[0];
                       this.latestHeader = {
                         game: `vs ${opponent}`,
                         quarter: latest.period?.number || "N/A",
